--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,7 @@
 :root {
     /* Paleta de Cores da Unifametro (adaptada para modernidade) */
-    --primary-green: #252a47; /* Verde escuro principal */
-    --secondary-green: #32506e; /* Verde um pouco mais claro para acentos */
+    --primary-green: #104120; /* Verde escuro principal */
+    --secondary-green:  #144624; /* Verde um pouco mais claro para acentos */
     --light-green: #e6f2ed; /* Verde muito claro para fundos sutis */
     --orange-accent: #ff9800; /* Laranja para destaque (mensagens enviadas) */
     --text-dark: #333333;
@@ -73,7 +73,7 @@ body {
 }
 
 .chat-header {
-    background-color: #252a47; /* Verde ligeiramente mais claro */
+    background-color: #104120; /* Verde ligeiramente mais claro */
     color: var(--text-light);
     padding: 18px 25px; /* Mais padding */
     display: flex;
